--- a/.gitignore
+++ b/.gitignore
@@ -361,9 +361,13 @@ FodyWeavers.xsd
 # output directory
 /[Oo]ut
 
-# Added to block values in source (May not be needed any longer)
+# Block values in source (May not be needed any longer)
 environment_variable_values.json
 environmentvariablevalues.json
+
+# Block Microsoft Defender DevOps Securiy items
+.gdn/
+report.sarif
 
 # Added to block site settings in source (Use if secrets are used in site settings)
 #[Ss]itesetting.yml
